Add improvements to schmerge date recognition

--- a/tests/testdata/schmerge/expected_result.tmpl
+++ b/tests/testdata/schmerge/expected_result.tmpl
@@ -164,6 +164,18 @@ DATES
 /
 
 DATES
+ 28 JLY 2020 /
+/
+
+--start files/welopen.jinja
+WELOPEN
+  'PROD4' 'OPEN' /
+/
+
+--end files/welopen.jinja
+
+
+DATES
  25 OCT 2020 /
 /
 
